Displaying damage from using 2 columns with no spacing inbetween to prevent the display card from getting too long

--- a/reactApp/pokeid/src/App.css
+++ b/reactApp/pokeid/src/App.css
@@ -46,7 +46,7 @@ body{
   background-color: #D9D9D9;
 }
 
-p{
+.text{
   font-size: 20px;
   text-align: center;
 }
@@ -83,7 +83,7 @@ p{
 .Display{
   display:flex;
   flex-direction: column;
-  border: 1px solid black;
+  border: 4px solid black;
   margin-top: 5vh;
   border-radius: 20px;
   width: 50vw;
@@ -102,6 +102,7 @@ p{
 #displayRowThree{
   display:flex;
   justify-content: space-around;
+  margin-bottom: 2vh;
 }
 .sprite{
   width: 15vw;
@@ -114,7 +115,9 @@ p{
   justify-content: space-between;
   margin: 10px;
 }
-
+#bruh{
+  display: block;
+}
 .typeDisplay{
   width: 105px;
 }
